[package]
name = "hello-async"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["compression-full", "decompression-full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
