[package]
name = "hello-async"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytemuck = { version = "1.24.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["compression-full", "decompression-full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "27.0"
winit = "0.30"
